@@ -2,6 +2,8 @@ Version 0.10.1 (2010/04/19)
 
   * cvcontour.cpp: "cvWriteContourPolygonCSV" function.
 
+  * cvblob.h: Fixed memory leak in "cvReleaseBlobs".
+
 Version 0.10.0 (2010/03/18)
 
   * cvlabel.cpp: new labeling algorithm.
